[package]
name = "ring-compat"
version = "0.1.1"
description = """
Compatibility crate for using RustCrypto's traits with the cryptographic
algorithm implementations from *ring*
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ring-compat"
repository = "https://github.com/RustCrypto/ring-compat"
categories = ["cryptography", "no-std"]
keywords = ["aead", "digest", "crypto", "ring", "signature"]

[dependencies]
aead = { version = "0.3", optional = true, default-features = false }
digest = { version = "0.9", optional = true }
ecdsa = { version = "0.11.0-pre.1", optional = true, default-features = false }
ed25519 = { version = "1", optional = true, default-features = false }
generic-array = { version = "0.14", default-features = false }
opaque-debug = "0.3"
p256 = { version = "0.8.0-pre", optional = true, default-features = false, features = ["ecdsa"] }
p384 = { version = "0.7.0-pre", optional = true, default-features = false, features = ["ecdsa"] }
ring = { version = "0.16", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
hex-literal = "0.2"
digest = { version = "0.9", features = ["dev"] }

[features]
default = ["aead", "alloc", "digest", "signature"]
alloc = ["aead/alloc"]
signature = ["ed25519", "p256", "p384"]
jwk = ["jwk-p256", "jwk-p384"]
jwk-p256 = ["p256/jwk"]
jwk-p384 = ["p384/jwk"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
